Changes to SFC User Guide for Boron M3
- Added VPP and IOS XE Renderers
- Renamed sfcofl2 to sfc-openflow-renderer
- Added IOS-XE Renderer overview
- Added SFC Proof of Transit overview

Change-Id: I0b2c6b5e18b47af02db961dd9f1cf5eabaeda5a7
Signed-off-by: Brady Johnson <brady.allen.johnson@ericsson.com>
Signed-off-by: Jose-Santos Pulido Garcia <jose.santos.pulido.garcia@ericsson.com>
Signed-off by: Vladimir Lavor <vlavor@cisco.com>
Signed-off by: Srihari Raghavan <srihari@cisco.com>

--- a/manuals/user-guide/src/main/asciidoc/sfc/sfc.adoc
+++ b/manuals/user-guide/src/main/asciidoc/sfc/sfc.adoc
@@ -10,7 +10,13 @@ include::odl-sfc-ovs-user.adoc[SFC OVS User guide]
 
 include::odl-sfc-classifier-user.adoc[SFC Classifier configuration User guide]
 
-include::odl-sfcofl2-user.adoc[SFC OpenFlow Renderer user guide]
+// SFC Renderers
+include::odl-sfc-openflow-renderer-user.adoc[SFC OpenFlow Renderer]
+
+include::odl-sfc-iosxe-renderer-user.adoc[SFC IOS XE Renderer]
+
+include::odl-sfc-vpp-renderer-user.adoc[SFC VPP Renderer]
+// SFC Renderers
 
 include::odl-sfc-sf-scheduler-user.adoc[Service Function selection scheduler]
 
@@ -18,3 +24,5 @@ include::odl-sfc-sf-scheduler-user.adoc[Service Function selection scheduler]
 // include::odl-sfc-sf-monitoring-user.adoc[Service Function Monitoring]
 
 include::odl-sfc-load-balance-user.adoc[Service Function Grouping and Load Balancing user guide]
+
+include::odl-sfc-pot-user.adoc[SFC Proof of Transit]
