--- a/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
+++ b/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
@@ -92,4 +92,6 @@ include::vtn/vtn-user.adoc[]
 
 include::controller/netconf/odl-netconf-user.adoc[]
 
+include::yangide/yangide-user.adoc[]
+
 include::yang-push/odl-yang-push-user.adoc[YANG-PUSH]
