First draft of YangIDE installation guide and initial template for user guide (still with mostly default text in user guide).
Change-Id: I2c8364bb33d052e6445cd1135d89e3e1505c9aea
Signed-off-by: David M. Karr <davidmichaelkarr@gmail.com>

--- a/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
+++ b/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
@@ -91,4 +91,6 @@ include::vtn/vtn-user.adoc[]
 
 include::controller/netconf/odl-netconf-user.adoc[]
 
+include::yangide/yangide-user.adoc[]
+
 include::yang-push/odl-yang-push-user.adoc[YANG-PUSH]
