--- a/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
@@ -129,6 +129,8 @@ include::yangtools/yangtools.adoc[]
 
 include::yang-push/odl-yang-push-dev.adoc[YANG-PUSH]
 
+include::atrium/odl-atrium-all-dev.adoc[]
+
 :numbered!:
 
 ///////
