--- a/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
+++ b/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
@@ -93,3 +93,5 @@ include::vtn/vtn-user.adoc[]
 include::controller/netconf/odl-netconf-user.adoc[]
 
 include::yang-push/odl-yang-push-user.adoc[YANG-PUSH]
+
+include::atrium/odl-atrium-all-user.adoc[]
