--- a/manuals/user-guide/src/main/asciidoc/sfc/sfc.adoc
+++ b/manuals/user-guide/src/main/asciidoc/sfc/sfc.adoc
@@ -14,6 +14,8 @@ include::odl-sfcofl2-user.adoc[SFC OpenFlow Renderer user guide]
 
 include::odl-sfc-sf-scheduler-user.adoc[Service Function selection scheduler]
 
+include::odl-sfc-verify-user.adoc[SFC Verification]
+
 // Removed because there is no content
 // include::odl-sfc-sf-monitoring-user.adoc[Service Function Monitoring]
 
