Add cluster scripts documentation
Change-Id: Ifb69d3c7d0bb5d8136337792d841b14f81fabd99
Signed-off-by: Luis Gomez <ecelgp@gmail.com>
Signed-off-by: Jamo Luhrsen <jluhrsen@redhat.com>

--- a/manuals/getting-started-guide/src/main/asciidoc/ch-clustering.adoc
+++ b/manuals/getting-started-guide/src/main/asciidoc/ch-clustering.adoc
@@ -72,7 +72,7 @@ replicas reside in +module-shards.conf+ file.
 
 * If you have a three node cluster and would like to be able to tolerate any
   single node crashing, a replica of every defined data shard must be running
-  on all three cluster nodes. 
+  on all three cluster nodes.
 +
 NOTE: This is because OpenDaylight's clustering implementation requires a
       majority of the defined shard replicas to be running in order to
@@ -247,25 +247,25 @@ odl-cluster-data {
     mailbox-type = "org.opendaylight.controller.cluster.common.actor.MeteredBoundedMailbox"
     mailbox-capacity = 1000
     mailbox-push-timeout-time = 100ms
-  }	
- 
+  }
+
   metric-capture-enabled = true
- 
+
   akka {
     loglevel = "DEBUG"
     loggers = ["akka.event.slf4j.Slf4jLogger"]
- 
+
     actor {
- 
+
       provider = "akka.cluster.ClusterActorRefProvider"
       serializers {
                 java = "akka.serialization.JavaSerializer"
                 proto = "akka.remote.serialization.ProtobufSerializer"
               }
- 
+
               serialization-bindings {
                   "com.google.protobuf.Message" = proto
- 
+
               }
     }
     remote {
@@ -278,36 +278,36 @@ odl-cluster-data {
         receive-buffer-size = 52428800
       }
     }
- 
+
     cluster {
       seed-nodes = ["akka.tcp://opendaylight-cluster-data@10.194.189.96:2550"]
- 
+
       auto-down-unreachable-after = 10s
- 
+
       roles = [
         "member-1"
       ]
- 
+
     }
   }
 }
- 
+
 odl-cluster-rpc {
   bounded-mailbox {
     mailbox-type = "org.opendaylight.controller.cluster.common.actor.MeteredBoundedMailbox"
     mailbox-capacity = 1000
     mailbox-push-timeout-time = 100ms
   }
- 
+
   metric-capture-enabled = true
- 
+
   akka {
     loglevel = "INFO"
     loggers = ["akka.event.slf4j.Slf4jLogger"]
- 
+
     actor {
       provider = "akka.cluster.ClusterActorRefProvider"
- 
+
     }
     remote {
       log-remote-lifecycle-events = off
@@ -316,10 +316,10 @@ odl-cluster-rpc {
         port = 2551
       }
     }
- 
+
     cluster {
       seed-nodes = ["akka.tcp://opendaylight-cluster-rpc@10.194.189.96:2551"]
- 
+
       auto-down-unreachable-after = 10s
     }
   }
@@ -383,3 +383,52 @@ module-shards = [
     }
 ]
 ----
+
+=== Clustering scripts
+
+OpenDaylight includes some scripts to help with the clustering feature.
+
+NOTE: Scripts are stored in the OpenDaylight distribution/bin folder, and
+maintained in the distribution project https://git.opendaylight.org/gerrit/p/integration/distribution[git repo] in the folder
+distribution-karaf/src/main/assembly/bin/
+
+==== Configure Cluster script
+
+This script is used to configure the cluster parameters (e.g. akka.conf,
+module-shards.conf) on a member of the controller cluster. The user should
+restart the node to apply changes.
+
+NOTE: The script can be used before starting controller for the first time.
+
+*Usage:* bin/configure_cluster.sh <index> <seed_nodes_list>
+
+* index: Integer within 1..N, where N is the number of seed nodes. This indicates
+  which controller node (1..N) is configured by the script.
+* seed_nodes_list: List of seed nodes (IP address), separated by comma or space.
+
+The IP address at the provided index should belong to the member executing
+the script. When running this script on multiple seed nodes, keep the
+seed_node_list same, and vary the index from 1 through N.
+
+Optionally, shards can be configured in a more granular way by modifying the
+file "custom_shard_configs.txt" in the same folder as this tool. Please see
+that file for more details.
+
+*Example:* bin/configure_cluster.sh 2 192.168.0.1 192.168.0.2 192.168.0.3
+
+The above command will configure the member 2 (IP address 192.168.0.2) of a
+cluster made of 192.168.0.1 192.168.0.2 192.168.0.3.
+
+==== Set Persistence script
+
+This script is used to enable or disable the config datastore persistence. The
+default state is enabled but there are cases where persistence may not be
+required or even desired. The user should restart node to apply changes.
+
+NOTE: The script can be used before starting controller for the first time.
+
+*Usage:* bin/set_persistence.sh <on/off>
+
+*Example:* bin/set_persistence.sh off
+
+The above command will disable the config datastore persistence.
