Add OCP Plugin User Guide
Change-Id: I5138b4fdaa53e8c5214b81ddf4e0228c6051c8e6
Signed-off-by: Richard <m8809301@msn.com>

--- a/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
+++ b/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
@@ -59,6 +59,8 @@ include::netide/odl-netide-user-guide.adoc[NetIDE]
 
 include::nic/nic-user.adoc[NIC]
 
+include::ocpplugin/ocp-user-guide.adoc[OCP]
+
 include::sdninterfaceapp/odl-sdninterfaceapp-all-user.adoc[ODL-SDNi]
 
 include::openflowplugin/odl-ofp-user-guide.adoc[OpenFlow Plugin]
