User Guide for OCP Plugin
Change-Id: I5138b4fdaa53e8c5214b81ddf4e0228c6051c8e6
Signed-off-by: Richard <m8809301@msn.com>

--- a/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
+++ b/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
@@ -93,3 +93,5 @@ include::vtn/vtn-user.adoc[]
 include::controller/netconf/odl-netconf-user.adoc[]
 
 include::yang-push/odl-yang-push-user.adoc[YANG-PUSH]
+
+include::ocpplugin/ocp-user-guide.adoc[OCP]
