Fixing mixed case issues with images in VTN docs
Change-Id: I8a5602bce52f5bfd13601d2b74de097869155685
Signed-off-by: Colin Dixon <colin@colindixon.com>

--- a/manuals/user-guide/src/main/asciidoc/vtn/VTN_Manager_How_To_Configure_Flowfilters.adoc
+++ b/manuals/user-guide/src/main/asciidoc/vtn/VTN_Manager_How_To_Configure_Flowfilters.adoc
@@ -17,7 +17,7 @@ As an option, it is possible to change the MAC address when the packet is transf
 |===
 
 .Flow Filter Example
-image::vtn/Flow_filter_example.png["Flow filter example",width=500]
+image::vtn/flow_filter_example.png["Flow filter example",width=500]
 
 * Following steps explain flow-filter function:
 
