--- a/manuals/getting-started-guide/src/main/asciidoc/bk-getting-started-guide.adoc
+++ b/manuals/getting-started-guide/src/main/asciidoc/bk-getting-started-guide.adoc
@@ -71,6 +71,8 @@ include::ch-xsql-commands.adoc[]
 
 include::ch-clustering.adoc[]
 
+include::ch-controller-version.adoc[]
+
 include::chapter_security_considerations.adoc[]
 
 = Project-specific Installation Guides
@@ -127,4 +129,3 @@ Example Index
 The index is normally left completely empty, it's contents being
 generated automatically by the DocBook toolchain.
 ////////////////////////////////////////////////////////////////
-
