Migrating security considerations to reST
Change-Id: Iebb4e6e031bc9d760edd3323ef28f6f68b311512
Signed-off-by: Colin Dixon <colin@colindixon.com>

--- a/manuals/getting-started-guide/src/main/asciidoc/bk-getting-started-guide.adoc
+++ b/manuals/getting-started-guide/src/main/asciidoc/bk-getting-started-guide.adoc
@@ -59,7 +59,9 @@ the end of their file.
 
 = Getting to know OpenDaylight
 
-include::chapter_security_considerations.adoc[]
+== Placeholder
+
+Placeholder to keep the build working before this whole book is deleted.
 
 :numbered!:
 
