Add OCP Plugin Developer Guide
Fix https://git.opendaylight.org/gerrit/#/c/40484/4/manuals/user-guide/src/main/asciidoc/ocpplugin/ocp-user-guide.adoc@125

Developer's Certificate of Origin 1.1

        By making a contribution to this project, I certify that:

        (a) The contribution was created in whole or in part by me and I
            have the right to submit it under the open source license
            indicated in the file; or

        (b) The contribution is based upon previous work that, to the best
            of my knowledge, is covered under an appropriate open source
            license and I have the right under that license to submit that
            work with modifications, whether created in whole or in part
            by me, under the same open source license (unless I am
            permitted to submit under a different license), as indicated
            in the file; or

        (c) The contribution was provided directly to me by some other
            person who certified (a), (b) or (c) and I have not modified
            it.

        (d) I understand and agree that this project and the contribution
            are public and that a record of the contribution (including all
            personal information I submit with it, including my sign-off) is
            maintained indefinitely and may be redistributed consistent with
            this project or the open source license(s) involved.

Change-Id: Id22fffbdcc170e0c4bd9a5837571ba8396d3f67b
Signed-off-by: Richard <m8809301@msn.com>

--- a/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
@@ -86,6 +86,8 @@ include::netide/netide-developer-guide.adoc[]
 
 include::neutron/neutron.adoc[]
 
+include::ocpplugin/ocp-developer-guide.adoc[OCP]
+
 include::sdninterfaceapp/odl-sdninterfaceapp-all-dev.adoc[]
 
 include::openflowjava/odl-openflowjava-protocol-dev.adoc[]
